--- a/src/main/view/index.html
+++ b/src/main/view/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script src="main.js"></script>
     <title>...</title>
 </head>
-<body onload="update(jsonTest)">
+<body>
     <div id="frame" class="main-frame">
         <img src="" id="sword">
         <div class="vstack gap-4">
@@ -47,24 +48,6 @@
                         <div id="enemy-stats3" class="enemy-char-stats"></div>
                         <img id="enemy-char3" class="char float-end" style=" width: 50px">
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid text-center">
-        <div class="row">
-            <div id="basic-buttons" class="col">
-                <div class="vstack">
-                    <button type="button" onclick="takeTurn('Mango')" class="btn btn-primary">Take Turn</button>
-                    <button type="button" onclick="winBattle()" class="btn btn-primary">WinBattle</button>
-                    <button type="button" onclick="loseBattle()" class="btn btn-primary">LoseBattle</button>
-                    <button type="button" onclick="restore()" class="btn btn-primary">Restore</button>
-                </div>
-            </div>
-            <div id="battle-state-info" class="col">
-            </div>
-            <div id="battle-option-list" class="col">
-                <div id="battle-option-buttons" class="vstack">
                 </div>
             </div>
         </div>
