--- a/src/main/view/aunth.html
+++ b/src/main/view/aunth.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>...</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script src="main.js"></script>
 </head>
-<body>
+<body style="padding: 3vh; background-color: blanchedalmond">
     <div>
-        <input id="username" placeholder="Username">
-        <input id="password" placeholder="Password">
-        <button onclick="regClicked();" id="registerBut">Register</button>
-        <button onclick="loginClicked();" id="loginBut">Login</button>
+        <input id="username" class="input-group-text" placeholder="Username">
+        <hr>
+        <input id="password" placeholder="Password" class="input-group-text">
+        <hr>
+        <button class="btn-primary" onclick="loginClicked();" id="loginBut">Login</button>
+        <hr>
+        <button class="btn-secondary" onclick="regClicked();" id="registerBut">Register</button>
+        <hr>
         <p id="info"></p>
     </div>
 </body>
