--- a/src/main/view/aunth.html
+++ b/src/main/view/aunth.html
@@ -3,26 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>...</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" type="text/javascript"></script>
     <script src="main.js"></script>
 </head>
 <body style="padding: 3vh; background-color: blanchedalmond">
-    <div>
-        <input id="username" class="input-group-text" placeholder="Username">
-        <hr>
-        <input id="password" placeholder="Password" class="input-group-text">
-        <hr>
-        <button class="btn-primary" onclick="loginClicked();" id="loginBut">Login</button>
-        <hr>
-        <button class="btn-secondary" onclick="regClicked();" id="registerBut">Register</button>
-        <hr>
-        <p id="info"></p>
-    </div>
+<div>
+    <input class="input-group-text" id="username" placeholder="Username">
+    <hr>
+    <input class="input-group-text" id="password" placeholder="Password">
+    <hr>
+    <button class="btn-primary" id="loginBut" onclick="loginClicked();">Login</button>
+    <hr>
+    <button class="btn-secondary" id="registerBut" onclick="regClicked();">Register</button>
+    <hr>
+    <p id="info"></p>
+</div>
 </body>
 
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+<script crossorigin="anonymous"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
+        src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 
 </html>
